added Material UI, added tile editing

--- a/apps/tailor/src/app/app.component.html
+++ b/apps/tailor/src/app/app.component.html
@@ -1,9 +1,10 @@
-<div style="text-align: center">
-  <h1>Welcome to tailor!</h1>
-  <img
-    width="450"
-    src="https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png"
-    alt="Nx - Smart, Fast and Extensible Build System"
-  />
+<div class="container">
+  <div class="header">
+    <h1>Tailor</h1>
+    <h2>The <i>modular</i> resume builder.</h2>
+  </div>
+  <div style="height: 1080px; width: 50%">
+    <tailor-editor></tailor-editor>
+  </div>
+  Logan Rose 2022
 </div>
-<div>Message: {{ hello$ | async | json }}</div>
