--- a/libs/ui/src/lib/tile/tile.component.html
+++ b/libs/ui/src/lib/tile/tile.component.html
@@ -1,11 +1,13 @@
-<div class="header">
-  <button *ngIf="editMode" (click)="toggleEdit()">
+<div class="header" *ngIf="editMode">
+  <button (click)="toggleEdit()">
     <div *ngIf="!editing">Edit</div>
     <div *ngIf="editing">Save</div>
   </button>
+  <button (click)="duplicate()">Duplicate</button>
+  <!-- <button *ngIf="editMode" (click)="lockTile()">Lock</button> -->
 </div>
 <div
-  *ngIf="!!editing"
+  *ngIf="!editing"
   class="container"
   [ngClass]="{
     left: align === 'left',
@@ -14,7 +16,7 @@
   }"
 >
   <h1 [ngStyle]="{ 'font-size': titleSize + 'px' }">{{ title }}</h1>
-  <h2>{{ subtitle }}</h2>
+  <h2 [ngStyle]="{ 'font-size': subtitleSize + 'px' }">{{ subtitle }}</h2>
   <div *ngIf="fromDate && toDate">
     <h2>{{ simplifyDate(fromDate) }} - {{ simplifyDate(toDate) }}</h2>
   </div>
@@ -23,7 +25,7 @@
   </div>
   <p>{{ body }}</p>
 </div>
-<div *ngIf="!editing" class="container">
+<div *ngIf="editing" class="container">
   <label>Align</label>
   <mat-radio-group class="align" [(ngModel)]="align">
     <mat-radio-button value="left">Left</mat-radio-button>
@@ -31,8 +33,18 @@
     <mat-radio-button value="right">Right</mat-radio-button>
   </mat-radio-group>
 
+  <label>Title Size</label>
   <mat-slider
     [(ngModel)]="titleSize"
+    min="10"
+    max="72"
+    step="1"
+    value="14"
+  ></mat-slider>
+
+  <label>Subtitle Size</label>
+  <mat-slider
+    [(ngModel)]="subtitleSize"
     min="10"
     max="72"
     step="1"
