--- a/libs/ui/src/lib/tile/tile.component.html
+++ b/libs/ui/src/lib/tile/tile.component.html
@@ -1,9 +1,8 @@
 <div class="header" *ngIf="editMode">
-  <button (click)="toggleEdit()">
-    <div *ngIf="!editing">Edit</div>
-    <div *ngIf="editing">Save</div>
-  </button>
+  <button *ngIf="!editing" (click)="toggleEdit()">Edit</button>
+  <button *ngIf="editing" (click)="save()">Save</button>
   <button (click)="duplicate()">Duplicate</button>
+  <button (click)="deleteTile()">Delete</button>
   <!-- <button *ngIf="editMode" (click)="lockTile()">Lock</button> -->
 </div>
 <div
@@ -25,53 +24,89 @@
   </div>
   <p>{{ body }}</p>
 </div>
-<div *ngIf="editing" class="container">
-  <label>Align</label>
-  <mat-radio-group class="align" [(ngModel)]="align">
-    <mat-radio-button value="left">Left</mat-radio-button>
-    <mat-radio-button value="center">Center</mat-radio-button>
-    <mat-radio-button value="right">Right</mat-radio-button>
-  </mat-radio-group>
+<div *ngIf="editing" class="container editing">
+  <mat-card>
+    <mat-card-title>Alignment</mat-card-title>
+    <mat-card-content>
+      <mat-radio-group class="align" [(ngModel)]="align">
+        <mat-radio-button value="left">Left</mat-radio-button>
+        <mat-radio-button value="center">Center</mat-radio-button>
+        <mat-radio-button value="right">Right</mat-radio-button>
+      </mat-radio-group>
+    </mat-card-content>
+  </mat-card>
+  <br />
+  <mat-card>
+    <mat-card-title>Title</mat-card-title>
+    <mat-card-content>
+      <mat-form-field appearance="outline">
+        <div class="horizontal">
+          <input matInput [(ngModel)]="title" placeholder="Title" />
+        </div>
+      </mat-form-field>
+      <div class="horizontal">
+        <mat-form-field class="title-size-number">
+          <input matInput [(ngModel)]="titleSize" />
+        </mat-form-field>
+        <mat-slider
+          class="title-size-slider"
+          [(ngModel)]="titleSize"
+          min="10"
+          max="72"
+          step="1"
+          value="14"
+        ></mat-slider>
+      </div>
+    </mat-card-content>
+  </mat-card>
 
-  <label>Title Size</label>
-  <mat-slider
-    [(ngModel)]="titleSize"
-    min="10"
-    max="72"
-    step="1"
-    value="14"
-  ></mat-slider>
-
-  <label>Subtitle Size</label>
-  <mat-slider
-    [(ngModel)]="subtitleSize"
-    min="10"
-    max="72"
-    step="1"
-    value="14"
-  ></mat-slider>
-
-  <mat-form-field appearance="outline">
-    <input [(ngModel)]="title" matInput placeholder="Title" />
-  </mat-form-field>
-  <mat-form-field appearance="outline">
-    <input [(ngModel)]="subtitle" matInput placeholder="Subtitle" />
-  </mat-form-field>
-  <mat-form-field appearance="fill">
-    <mat-label>From</mat-label>
-    <input [(ngModel)]="fromDate" matInput [matDatepicker]="from" />
-    <mat-datepicker-toggle matSuffix [for]="from"></mat-datepicker-toggle>
-    <mat-datepicker #from></mat-datepicker>
-  </mat-form-field>
-
-  <mat-form-field appearance="fill">
-    <mat-label>To</mat-label>
-    <input [(ngModel)]="toDate" matInput [matDatepicker]="to" />
-    <mat-datepicker-toggle matSuffix [for]="to"></mat-datepicker-toggle>
-    <mat-datepicker #to></mat-datepicker>
-  </mat-form-field>
-
-  <mat-form-field appearance="outline">
-    <textarea [(ngModel)]="body" matInput placeholder="Body"></textarea>
-  </mat-form-field>
+  <br />
+  <mat-card>
+    <mat-card-title>Subtitle</mat-card-title>
+    <mat-card-content>
+      <mat-form-field appearance="outline">
+        <input matInput [(ngModel)]="subtitle" placeholder="Subtitle" />
+      </mat-form-field>
+      <div class="horizontal">
+        <mat-form-field class="title-size-number">
+          <input matInput [(ngModel)]="subtitleSize" />
+        </mat-form-field>
+        <mat-slider
+          class="title-size-slider"
+          [(ngModel)]="subtitleSize"
+          min="10"
+          max="72"
+          step="1"
+          value="14"
+        ></mat-slider>
+      </div>
+    </mat-card-content>
+  </mat-card>
+  <br />
+  <mat-card>
+    <mat-card-title>Time Period</mat-card-title>
+    <mat-card-content>
+      <mat-form-field appearance="fill">
+        <mat-label>From</mat-label>
+        <input [(ngModel)]="fromDate" matInput [matDatepicker]="from" />
+        <mat-datepicker-toggle matSuffix [for]="from"></mat-datepicker-toggle>
+        <mat-datepicker #from></mat-datepicker>
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>To</mat-label>
+        <input [(ngModel)]="toDate" matInput [matDatepicker]="to" />
+        <mat-datepicker-toggle matSuffix [for]="to"></mat-datepicker-toggle>
+        <mat-datepicker #to></mat-datepicker>
+      </mat-form-field>
+    </mat-card-content>
+  </mat-card>
+  <br />
+  <mat-card>
+    <mat-card-title>Body</mat-card-title>
+    <mat-card-content>
+      <mat-form-field appearance="outline" style="width: 100%">
+        <textarea [(ngModel)]="body" matInput></textarea>
+      </mat-form-field>
+    </mat-card-content>
+  </mat-card>
 </div>
