added multiple body types, save dialog, other ui tweaks

--- a/apps/tailor/src/app/app.component.html
+++ b/apps/tailor/src/app/app.component.html
@@ -1,7 +1,17 @@
 <div class="container">
   <div class="header">
     <h1>Tailor</h1>
-    <h2>The <i>modular</i> resume builder.</h2>
+    <h2>
+      The
+      <i
+        style="
+          font-family: Brush Script MT, Brush Script Std, cursive;
+          font-weight: 100;
+        "
+        >modular</i
+      >
+      resume builder.
+    </h2>
   </div>
   <div style="height: 1080px; width: 50%">
     <tailor-editor></tailor-editor>
