--- a/apps/tailor/src/app/app.component.scss
+++ b/apps/tailor/src/app/app.component.scss
@@ -13,3 +13,15 @@
   flex-direction: column;
   align-items: center;
 }
+
+h1, h2 {
+  font-weight: lighter;
+  padding: 0px;
+}
+
+h1 {
+  margin-bottom: 0px;
+}
+h2 {
+  margin-top: 0px;
+}
