--- a/libs/ui/src/lib/editor/editor.component.scss
+++ b/libs/ui/src/lib/editor/editor.component.scss
@@ -1,19 +1,21 @@
-.menu{
-  background-color: white;
+.menu-container{
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  background-color: white;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
-.button{
-  background-color: aquamarine;
-  margin: 10px;
-  height: 50px;
-  width: 100px;
-  border: none;
+
+.menu{
+  display: table-cell;
 }
-.button:hover{
-  background-color: rgb(92, 180, 151);
-  cursor: pointer;
+.button {
+  margin-left: 5px;
+  margin-right: 5px;
 }
+
 .button-group-label{
   padding: 0px;
   margin: 0px;
