--- a/libs/ui/src/lib/tile/tile.component.html
+++ b/libs/ui/src/lib/tile/tile.component.html
@@ -1,10 +1,44 @@
 <div class="header" *ngIf="editMode">
-  <button *ngIf="!editing" (click)="toggleEdit()">Edit</button>
-  <button *ngIf="editing" (click)="save()">Save</button>
-  <button (click)="duplicate()">Duplicate</button>
-  <button (click)="deleteTile()">Delete</button>
-  <!-- <button *ngIf="editMode" (click)="lockTile()">Lock</button> -->
+  <div class="menu">
+    <button
+      *ngIf="!editing"
+      mat-raised-button
+      color="primary"
+      (click)="toggleEdit()"
+      class="button"
+    >
+      Edit
+    </button>
+    <button
+      *ngIf="editing"
+      mat-raised-button
+      color="primary"
+      (click)="save()"
+      class="button"
+    >
+      Save
+    </button>
+    <button
+      mat-raised-button
+      color="primary"
+      (click)="duplicate()"
+      class="button"
+    >
+      Duplicate
+    </button>
+    <button
+      mat-raised-button
+      color="primary"
+      (click)="deleteTile()"
+      class="button"
+    >
+      Delete
+    </button>
+  </div>
 </div>
+
+<!-- DISPLAY MDOE -->
+
 <div
   *ngIf="!editing"
   class="container"
@@ -22,8 +56,27 @@
   <div *ngIf="fromDate && toDate === undefined">
     <h2>{{ simplifyDate(fromDate) }} - Present</h2>
   </div>
-  <p>{{ body }}</p>
+  <div *ngIf="bodyType === 'text'">
+    <p>{{ body }}</p>
+  </div>
+  <div *ngIf="bodyType === 'bullet-list'">
+    <ul *ngFor="let item of listItems">
+      <li>
+        {{ item }}
+      </li>
+    </ul>
+  </div>
+  <div *ngIf="bodyType === 'chip-list'" class="chip-list">
+    <mat-chip-list *ngFor="let item of listItems">
+      <mat-chip color="primary" selected style="margin: 5px">{{
+        item
+      }}</mat-chip>
+    </mat-chip-list>
+  </div>
 </div>
+
+<!-- EDIT MODE -->
+
 <div *ngIf="editing" class="container editing">
   <mat-card>
     <mat-card-title>Alignment</mat-card-title>
@@ -104,9 +157,75 @@
   <mat-card>
     <mat-card-title>Body</mat-card-title>
     <mat-card-content>
-      <mat-form-field appearance="outline" style="width: 100%">
-        <textarea [(ngModel)]="body" matInput></textarea>
+      <mat-form-field appearance="fill">
+        <mat-label>Body Type</mat-label>
+        <mat-select [(ngModel)]="bodyType">
+          <mat-option *ngFor="let type of BODY_TYPES" [value]="type">
+            {{ type }}
+          </mat-option>
+        </mat-select>
       </mat-form-field>
+
+      <div *ngIf="bodyType === 'text'">
+        <mat-form-field appearance="outline" style="width: 100%">
+          <textarea
+            [(ngModel)]="body"
+            matInput
+            placeholder="Body text"
+          ></textarea>
+        </mat-form-field>
+      </div>
+
+      <div *ngIf="bodyType === 'bullet-list'">
+        <mat-form-field
+          appearance="outline"
+          style="width: 100%"
+          *ngFor="let item of listItems; let index = index"
+        >
+          <mat-label>Entry {{ index + 1 }}</mat-label>
+          <input
+            [name]="'' + index"
+            matInput
+            [ngModel]="listItems[index]"
+            (change)="onValueUpdate($event)"
+          />
+        </mat-form-field>
+        <button mat-raised-button (click)="addItem()" color="primary">
+          Add item
+        </button>
+        &nbsp;
+        <button mat-raised-button (click)="removeLastItem()">
+          Remove item
+        </button>
+      </div>
+
+      <div *ngIf="bodyType === 'chip-list'">
+        <mat-form-field
+          class="example-chip-list"
+          style="width: 100%"
+          appearance="fill"
+        >
+          <mat-label>List Items</mat-label>
+          <mat-chip-list #chipList aria-label="List Items">
+            <mat-chip
+              *ngFor="let item of listItems; let index = index"
+              (removed)="removeItemAtPos(index)"
+            >
+              {{ item }}
+              <button matChipRemove>
+                <mat-icon>cancel</mat-icon>
+              </button>
+            </mat-chip>
+            <input
+              placeholder="New Entry..."
+              [matChipInputFor]="chipList"
+              [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+              [matChipInputAddOnBlur]="addOnBlur"
+              (matChipInputTokenEnd)="addChip($event)"
+            />
+          </mat-chip-list>
+        </mat-form-field>
+      </div>
     </mat-card-content>
   </mat-card>
 </div>
