--- a/libs/ui/src/lib/tile/tile.component.scss
+++ b/libs/ui/src/lib/tile/tile.component.scss
@@ -1,6 +1,20 @@
 .header{
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  width: 100%;
+  background-color: rgb(240, 228, 255);
 }
+.menu{
+  display: table-cell;
+}
+
+.button{
+  margin: 5px
+}
+
+
 .container {
   padding: 5px;
   display: flex !important;
@@ -36,4 +50,11 @@ h1, h2{
 }
 .right {
   align-items: flex-end;
+}
+
+.chip-list {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap:wrap;
 }
