added firebase authentication, added accordion for edit tiles

--- a/apps/tailor/src/app/app.component.html
+++ b/apps/tailor/src/app/app.component.html
@@ -12,6 +12,10 @@
       >
       resume builder.
     </h2>
+    <button (click)="auth.googleSignin()">Sign in</button>
+    <div *ngIf="auth.user$ | async as user">
+      {{ user | json }}
+    </div>
   </div>
   <div style="height: 1080px; width: 50%">
     <tailor-editor></tailor-editor>
