set up firestore and firebase auth

--- a/projects/ui-kit/src/lib/save-dialog/save-dialog.component.html
+++ b/projects/ui-kit/src/lib/save-dialog/save-dialog.component.html
@@ -1,4 +1,4 @@
-<mat-card class="container">
+<mat-card class="container hidden">
   <mat-card-title> Save Layout </mat-card-title>
   <mat-card-content>
     <mat-form-field appearance="outline">
