--- a/projects/ui-kit/src/lib/edit-dialog/edit-dialog.component.scss
+++ b/projects/ui-kit/src/lib/edit-dialog/edit-dialog.component.scss
@@ -1,10 +1,25 @@
-.container {
+.vertical-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 0px;
+  height: fit-content;
+}
+.hidden {
+  border: hidden !important;
+  box-shadow: none !important;
 }
 
+.horizontal-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.demo {
+  background-color: grey;
+  display: flex;
+  width: 100%;
+}
 mat-card {
   border: none;
 }
