--- a/projects/ui-kit/src/lib/editor/editor.component.html
+++ b/projects/ui-kit/src/lib/editor/editor.component.html
@@ -32,7 +32,7 @@
       (click)="toggleBackground()"
       class="button"
     >
-      Toggle Background
+      Background
     </button>
     <button mat-raised-button color="primary" (click)="lock()" class="button">
       <div *ngIf="options.draggable?.enabled">Lock</div>
